<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#471313"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/znak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posiada_znak_specjalny"
        android:textColor="#F49797"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cyfry"
        app:layout_constraintVertical_bias="0.062" />

    <CheckBox
        android:id="@+id/cyfry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posiada_cyfr"
        android:textColor="#F49797"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mała"
        app:layout_constraintVertical_bias="0.05" />

    <CheckBox
        android:id="@+id/mała"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obecna_ma_a_litera"
        android:textColor="#F49797"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duża"
        app:layout_constraintVertical_bias="0.035" />

    <CheckBox
        android:id="@+id/duża"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obecna_wielka_litera"
        android:textColor="#F49797"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zgodne"
        app:layout_constraintVertical_bias="0.037" />

    <CheckBox
        android:id="@+id/zgodne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/has_a_s_zgodne"
        android:textColor="#F49797"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b"
        app:layout_constraintVertical_bias="0.036" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/b"
        android:layout_width="276dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a"
        app:layout_constraintVertical_bias="0.077"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/b2"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:background="#F49797"
            android:backgroundTint="#F49797"
            android:hint="@string/powt_rz_has_o"
            android:textColor="#471313"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/a"
        android:layout_width="276dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a2"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:background="#F49797"
            android:backgroundTint="#F49797"
            android:hint="@string/wproawd_has_o"
            android:textColor="#471313"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sprawdź"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#F49797"
        android:text="@string/sprawd"
        android:textColor="#471313"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/znak"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>